# building-agents-workshop

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
labs/: 0_jupyter_notebooks.ipynb  10_workflow_evaluator_optimizer.ipynb  11_workflow_ochestrator_workers.ipynb  12_basic_react_agent.ipynb  13_memory_and_reducers.ipynb  15_complex_agent.ipynb  1_minimal_example.ipynb  2_llms_parameters.ipynb  3_intro_langchain.ipynb  4_rag.ipynb  5_function_calling.ipynb  6_evaluation.ipynb  7_workflow_prompt_chaining.ipynb  8_workflow_router.ipynb  9_workflow_parallelization.ipynb  9_workflow_parallelization_asyncio.py  9_workflow_parallelization_mp.py
labs/assets/15_complex_agent/: analyst_system_prompt.jinja2  expert_system_prompt.jinja2  intro_conclusion_system_prompt.jinja2  report_writer_system_prompt.jinja2  search_system_prompt.jinja2  section_writer_system_prompt.jinja2
labs_full/: 0_jupyter_notebooks.ipynb  10_workflow_evaluator_optimizer.ipynb  11_workflow_ochestrator_workers.ipynb  12_basic_react_agent.ipynb  14_HITL.ipynb  15_complex_agent.ipynb  2_llms_parameters.ipynb  3_intro_langchain.ipynb  4_rag.ipynb  5_function_calling.ipynb  6_evaluation.ipynb  7_workflow_prompt_chaining.ipynb  8_workflow_router.ipynb  9_workflow_parallelization.ipynb
labs_full/14_HITL/: langgraph.json
labs_full/14_HITL/src/react_agent/: graph.py
labs_full/assets/: system_prompt.jinja2  user_prompt.jinja2
sample_app/: pyproject.toml
sample_app/src/react_agent/: app.py  graph.py
